Make boot_emIRT an S3 method
Also make the function return an error when bootstrapping is not
implemented.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,13 @@ import(Rcpp)
 export(binIRT, ordIRT, dynIRT, hierIRT)
 export(convertRC, makePriors, getStarts)
 export(networkIRT, poisIRT)
+S3method(boot_emIRT, emIRT)
+S3method(boot_emIRT, binIRT)
+S3method(boot_emIRT, ordIRT)
+S3method(boot_emIRT, dynIRT)
+S3method(boot_emIRT, hierIRT)
+S3method(boot_emIRT, networkIRT)
+S3method(boot_emIRT, poisIRT)
 export(boot_emIRT)
 
 importFrom("stats", "pnorm", "qnorm", "rnorm", "runif", "sd")
